# cloud-ops-env

./: Dockerfile  README.md  app.py  client.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
__pycache__/server/: app.py  env.py
cloud_ops_env/: README.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml
cloud_ops_env/openenv_cloud_ops_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cloud_ops_env/server/: Dockerfile  __init__.py  app.py  cloud_ops_env_environment.py
scripts/: oracle_rollout.py
server/: Dockerfile  app.py  inference.py  requirements.txt
